container-toolkit/archive/1.6.0/overview.rst
.. Date: August 10 2020
.. Author: pramarao

**************
Overview
**************
The NVIDIA Container Toolkit allows users to build and run GPU accelerated containers. 
The toolkit includes a container runtime `library <https://github.com/NVIDIA/libnvidia-container>`_ 
and utilities to automatically configure containers to leverage NVIDIA GPUs.

.. image:: https://cloud.githubusercontent.com/assets/3028125/12213714/5b208976-b632-11e5-8406-38d379ec46aa.png
   :width: 400


The NVIDIA Container Toolkit supports different container engines in the ecosystem - `Docker <https://docs.docker.com/get-started/overview/>`_, 
`LXC <https://linuxcontainers.org>`_, `Podman <http://podman.io/>`_ etc. Follow the :ref:`user-guide-1.6.0` for running GPU 
containers with these engines.

----

Architecture
============
The :ref:`arch-overview-1.6.0` describes the technical architecture of NVIDIA Container Toolkit and the packaging of the software.

----

Installation Guide
===================
The :ref:`install-guide-1.6.0` shows how to install NVIDIA Container Toolkit on different Linux distributions and platforms.

----

User Guide
==========
The :ref:`user-guide-1.6.0` provides information on the configuration options available for running GPU containers.

----

.. Concepts and Architecture
.. ==========================
.. TBD: architecture here

.. ----

.. Release Notes
.. ==============
.. The release notes provides a summary of the changelog for releases of the NVIDIA Container Toolkit.

.. ----

License
=======
The NVIDIA Container Toolkit (and all included components) is licensed under `Apache 2.0 <https://www.apache.org/licenses/LICENSE-2.0>`_ and
contributions are accepted with a DCO. See the `contributing <https://github.com/NVIDIA/nvidia-container-toolkit/blob/master/CONTRIBUTING.md>`_ document for
more information.
